# actix_auth_service

./: .env  Cargo.toml  docker-compose.yml  like.json
migrations/: 20230118060101_create-user-table.sql
src/: main.rs
src/config/: crypto.rs  mod.rs
src/database/: user.rs
src/handlers/: mod.rs
src/models/: users.rs
